--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,15 @@
 build
 poppler.c
 poppler.so
+poppler-python/.deps/
+poppler-python/.libs/
+poppler-python/Makefile
+poppler-python/config.h
+poppler-python/config.log
+poppler-python/config.status
+poppler-python/demo/Makefile
+poppler-python/libtool
+poppler-python/poppler.la
+poppler-python/poppler_la-poppler.lo
+poppler-python/poppler_la-popplermodule.lo
+poppler-python/stamp-h1
