Use distribute/setuptools instead of distutils
This allows a reliable and portable handling of icons (at last!).

Please note that this is supposed to work with setuptools (old, not maintained),
but I only tested it using the newer distribute.

--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,8 @@
 *.pyc
 build/
 dist/
+
 MANIFEST
-poppler.c
-poppler.so
-poppler-python/.deps/
-poppler-python/.libs/
-poppler-python/Makefile
-poppler-python/config.h
-poppler-python/config.log
-poppler-python/config.status
-poppler-python/demo/Makefile
-poppler-python/libtool
-poppler-python/poppler.la
-poppler-python/poppler_la-poppler.lo
-poppler-python/poppler_la-popplermodule.lo
-poppler-python/stamp-h1
+pympress.egg-info/
+
 apidoc/
