Embed sphinx' build system to in docs/source
To update documentation in docs, go to docs/ and run 'make' and you're
done

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -1,21 +1,14 @@
 repo_docs := $(dir $(abspath $(lastword $(MAKEFILE_LIST))))
 repo_root := $(abspath $(repo_docs)/..)
-sources := $(wildcard $(repo_root)/pympress/*.py)
+pysources := $(wildcard $(repo_root)/pympress/*.py)
 
-.INTERMEDIATE:index.rst
 
-%.tar:_build/index.html
-	tar cf $@ -C $(repo_docs)_build .
-
-_build/index.html:index.rst
-	sphinx-build -b html $(repo_docs) $(repo_docs)/_build
-
-pympress.rst:$(sources)
-	sphinx-apidoc -EMTo $(repo_docs) $(repo_root)/pympress
-
-index.rst:pympress.rst
-	@mv $< $@
+.PHONY:update clean
+update:
+	make -C source html
+	-mv source/_build/html/* ./
+	#sphinx-build -b html $(repo_docs)/source $(repo_docs)/source/_build
 
 clean:
-	rm -rf _build
+	rm -rf source/_build _modules _sources _static
 
