Revert "swap README and its link in docs so pages can build"
I don't like having a symlink in the root of the repo, however we can't
have a symlink in docs/ to a file outside of it (for the site to build).

This reverts commit 2cff98bf2c476488129105b35a71392c8de40130 and also
simply copies the file during the build process, to remove afterwards.

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -1,7 +1,7 @@
 
 .PHONY:update clean
 update:
-	@make -C source html
+	@cp ../README.md source/README.md && make -C source html && rm source/README.md
 
 clean:
 	@rm -rf source/_build _modules _sources _static
