--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,11 @@
 [bdist_wheel]
 universal=1
+
+[style]
+based_on_style = pep8
+column_limit = 120
+split_complex_comprehension = on
+split_penalty_comprehension = 5000
+split_penalty_excess_character = 40
+use_tabs = off
+indent_width = 4
