Pass options to/for backends

--- a/pympress/share/defaults.conf
+++ b/pympress/share/defaults.conf
@@ -91,6 +91,16 @@ maxpages = 200
 color = rgba(255,0,0,1.)
 width = 8
 
+[gst]
+enabled = on
+init_options =
+mime_types =
+
+[vlc]
+enabled = on
+init_options = --no-video-title-show,--no-xlib
+mime_types =
+
 [shortcuts]
 next = Right Down Page_Down space
 prev = Left Up Page_Up
