Make all shortcuts configurable
This has required (temporarily?) removing the accelerators from the
MenuItems (i.e. shortcuts do not appear in the drop down menus).
Shortcuts still appear (correctly with configurable modifications
reflected) in the About > Shortcuts popup.

--- a/pympress/share/defaults.conf
+++ b/pympress/share/defaults.conf
@@ -90,3 +90,33 @@ maxpages = 200
 [scribble]
 color = rgba(255,0,0,1.)
 width = 8
+
+[shortcuts]
+next = Right Down Page_Down space
+prev = Left Up Page_Up
+next_label = <ctrl>Right <ctrl>Down <ctrl>Page_Down <ctrl>space
+prev_label = <ctrl>Left <ctrl>Up <ctrl>Page_Up
+hist_back = BackSpace
+hist_forward = <ctrl>BackSpace
+first = Home
+last = End
+fullscreen_content = F11 f F5 <ctrl>l
+fullscreen_presenter = <ctrl>f
+quit = q
+pause_timer = p Pause
+reset_timer = r
+blank_screen = b
+highlight = h
+notes_mode = n
+annotations = a
+swap_screens = s
+open_file = o
+close_file = <ctrl>w
+goto_page = g
+jumpto_label = j
+talk_time = t
+zoom = z
+unzoom = u
+validate = Return KP_Enter
+cancel = Escape
+undo_scribble = <ctrl>z
