Adjust setup.cf for new media_overlays submodule
Also add defaults configuration file

--- a/setup.cfg
+++ b/setup.cfg
@@ -30,7 +30,9 @@ classifiers =
 	Topic :: Multimedia :: Graphics :: Viewers
 
 [options]
-packages = pympress
+packages =
+	pympress
+	pympress.media_overlays
 install_requires =
 	python-vlc
 	watchdog
@@ -38,6 +40,7 @@ install_requires =
 
 [options.package_data]
 pympress =
+	share/defaults.conf
 	share/xml/*.glade
 	share/css/*.css
 	share/pixmaps/*.png
