Add 'continous mode' for laser pointer
'Continous mode' shows the laser pointer (following the
mouse curser) permanently on the slides.
It can be activated either from the menu, or with shortcut L

--- a/pympress/share/defaults.conf
+++ b/pympress/share/defaults.conf
@@ -10,6 +10,7 @@ white_blanking = off
 monitor = 1
 start_fullscreen = off
 pointer = red
+pointer_mode = manual
 show_bigbuttons = off
 show_annotations = off
 scroll_number = off
@@ -130,3 +131,4 @@ unzoom = u
 validate = Return KP_Enter
 cancel = Escape
 undo_scribble = <ctrl>z
+toggle_pointermode = l
