Remove docs from docs/ and build docs using setup.py
The command is: python setup.py build_sphinx
Anything previously done by a Makefile etc. is now done in python.
Dependencies are provided with the “build_sphinx” extra in setup.cfg.

This will allow to pave the way to building the docs (now in gh-pages)
automatically at every push.

--- a/setup.cfg
+++ b/setup.cfg
@@ -38,6 +38,13 @@ install_requires =
 	watchdog
 	enum34;python_version<"3.4"
 
+[options.extras_require]
+build_sphinx =
+	sphinx
+	recommonmark
+	sphinxcontrib-napoleon
+	sphinx-rtd-theme
+
 [options.package_data]
 pympress =
 	share/defaults.conf
@@ -61,3 +68,8 @@ split_penalty_comprehension = 5000
 split_penalty_excess_character = 40
 use_tabs = off
 indent_width = 4
+
+[build_sphinx]
+source-dir = docs
+config-dir = docs
+builder = html
