--- a/.github/workflows/updatedocs.yml
+++ b/.github/workflows/updatedocs.yml
@@ -19,6 +19,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install setuptools wheel
+        sudo apt-get install gobject-introspection libgirepository-1.0-1 gir1.2-gtk-3.0 gir1.2-poppler-0.18 libgirepository1.0-dev
         pip install pycairo pygobject .[build_sphinx]
     - name: Build
       run: |
@@ -48,5 +49,5 @@ jobs:
         tar xzf pympress-docs.tar.gz
         git add .
         git -c user.email=me@cimba.li -c user.name="${GITHUB_ACTOR}" commit -m "Github Action-built docs update"
-        git push "https://${GITHUB_ACTOR}:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY.git" HEAD:${GITHUB_REF}
+        git push "https://${GITHUB_ACTOR}:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY.git" HEAD:gh-pages
 
