--- a/.github/workflows/updatedocs.yml
+++ b/.github/workflows/updatedocs.yml
@@ -17,10 +17,9 @@ jobs:
         python-version: '3.x'
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install setuptools wheel
-        sudo apt-get install gobject-introspection libgirepository-1.0-1 gir1.2-gtk-3.0 gir1.2-poppler-0.18 libgirepository1.0-dev
-        pip install pycairo pygobject .[build_sphinx]
+        sudo apt-get update -q
+        sudo apt-get install -qy gobject-introspection libgirepository-1.0-1 gir1.2-gtk-3.0 gir1.2-glib-2.0 gir1.2-gstreamer-1.0 gir1.2-poppler-0.18 python3-pip python3-setuptools python3-wheel libgirepository1.0-dev
+        pip install pygobject pycairo .[build_sphinx]
     - name: Build
       run: |
         python setup.py build_sphinx
@@ -29,9 +28,10 @@ jobs:
       uses: actions/upload-artifact@v1
       with:
         name: pympress-docs.tar.gz
+        path: pympress-docs.tar.gz
 
   deploy:
-    name: Deply docs
+    name: Deploy docs
     needs: build
     runs-on: ubuntu-latest
     steps:
@@ -44,9 +44,11 @@ jobs:
       uses: actions/download-artifact@v1
       with:
         name: pympress-docs.tar.gz
+        path: .
     - name: Extract and push
       run: |
         tar xzf pympress-docs.tar.gz
+        rm pympress-docs.tar.gz
         git add .
         git -c user.email=me@cimba.li -c user.name="${GITHUB_ACTOR}" commit -m "Github Action-built docs update"
         git push "https://${GITHUB_ACTOR}:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY.git" HEAD:gh-pages
