Remember last horizontal and vertical notes positions
Closes #122

--- a/pympress/share/defaults.conf
+++ b/pympress/share/defaults.conf
@@ -85,6 +85,10 @@ notes = {
 	    "orientation": "horizontal"
 	}
 
+[notes position]
+horizontal = right
+vertical = bottom
+
 [cache]
 maxpages = 200
 
