run a linter and fix style issues

--- a/setup.cfg
+++ b/setup.cfg
@@ -69,6 +69,23 @@ split_penalty_excess_character = 40
 use_tabs = off
 indent_width = 4
 
+[flake8]
+docstring-convention = google
+max-line-length = 120
+builtins = _, unicode
+exclude =
+	.git
+	__pycache__
+	build/
+	dist/
+
+ignore = D200, D210, D413, E251, E302, E303, W504,  # never complain about those
+		 D205, D212, D415, E201, E221, E241, E266, E301, E402, E701, E731  # allow sometimes, e.g. aligning code etc.
+
+per-file-ignores =
+	# do not complain about dummy functions
+	pympress/media_overlays/gif_backend.py: D102, E704
+
 [build_sphinx]
 source-dir = docs
 config-dir = docs
