--- a/setup.cfg
+++ b/setup.cfg
@@ -79,7 +79,7 @@ exclude =
 	build/
 	dist/
 
-ignore = D200, D210, D413, E251, E302, E303, W504,  # never complain about those
+ignore = D107, D200, D210, D413, E251, E302, E303, W504,  # never complain about those
 		 D205, D212, D415, E201, E221, E241, E266, E301, E402, E701, E731  # allow sometimes, e.g. aligning code etc.
 
 per-file-ignores =
