Move the translation process to poeditor.com
- use babel for message extraction and catalog building
- .mo catalog files are built on install and packaging, thus not kept in
  the repo anymore
- new strings (.pot file) are uploaded to poeditor.com at every push
- new translations (.po files) and associated badges are updated
  with packaging, and manually (for now − e.g. with version bumps).

--- a/.github/workflows/pythonpublish.yml
+++ b/.github/workflows/pythonpublish.yml
@@ -17,6 +17,13 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install setuptools wheel twine
+        pip install -e .[babel]
+    - name: Build catalogs
+      run: |
+        ./scripts/poedit.sh download
+        python setup.py compile_catalog
+      with:
+        poeditor_api_token: ${{ secrets.POEDITOR_API_TOKEN }}
     - name: Build and publish
       env:
         TWINE_USERNAME: __token__
