--- a/setup.cfg
+++ b/setup.cfg
@@ -37,6 +37,8 @@ install_requires =
 	python-vlc
 	watchdog
 	enum34;python_version<"3.4"
+setup_requires =
+	babel
 
 [options.extras_require]
 build_sphinx =
@@ -44,6 +46,9 @@ build_sphinx =
 	recommonmark
 	sphinxcontrib-napoleon
 	sphinx-rtd-theme
+babel =
+	babel
+	babelgladeextractor
 
 [options.package_data]
 pympress =
@@ -73,3 +78,17 @@ indent_width = 4
 source-dir = docs
 config-dir = docs
 builder = html
+
+[extract_messages]
+no_location = true
+no_wrap = true
+sort_output = true
+omit_header = true
+output-file = pympress/share/locale/pympress.pot
+mapping_file = pympress/share/locale/babel_mapping.cfg
+
+[compile_catalog]
+domain = pympress
+directory = pympress/share/locale/
+use-fuzzy = false
+statistics = true
