Add some sidebar links for pypi

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,6 +9,10 @@ author = Cimbali, Thomas Jost, Christof Rath, Epithumia
 author_email = me@cimba.li
 url = https://github.com/Cimbali/pympress/
 download_url = https://github.com/Cimbali/pympress/releases/latest
+project_urls =
+	Issues = https://github.com/Cimbali/pympress/issues/
+	Documentation = https://cimbali.github.io/pympress/
+	Source Code = https://github.com/Cimbali/pympress/
 license = GPLv2
 classifiers =
 	Development Status :: 5 - Production/Stable
