--- a/.github/workflows/push_linter.yml
+++ b/.github/workflows/push_linter.yml
@@ -1,9 +1,9 @@
-name: Python linting
+name: Basic python linting
 
 on: [push]
 
 jobs:
-  build:
+  lint:
 
     runs-on: ubuntu-latest
     strategy:
@@ -21,10 +21,9 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install flake8
+
     - name: Lint with flake8
       run: |
-        # Reduced list of ignores, show as warnings
-        flake8 . --count --show-source --statistics --select=E,F,W,C --exit-zero --ignore=E251,E302,E303,W504
         # Full list of ignores, fail on errors. No Docs errors.
         flake8 . --count --show-source --statistics --select=E,F,W,C
 
@@ -36,7 +35,5 @@ jobs:
     - name: Lint docstrings
       if: matrix.python-version == 3.8
       run: |
-        # Reduced list of ignores, show as warnings
-        flake8 . --count --show-source --statistics --select=D --exit-zero --ignore=D107,D200,D210,D413
         # Full list of ignores, fail on errors. No Docs errors.
         flake8 . --count --show-source --statistics --select=D
