--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,15 +5,17 @@ branches:
   - master
 clone_depth: 1
 
+image: Visual Studio 2019
 environment:
   py: python3
   vlc: without-vlc
   matrix:
   - arch: x86_64
+    mingw: mingw64
   - arch: i686
+    mingw: mingw32
 
 build_script:
-- cmd: if x%arch% == xx86_64 (set mingw=mingw64) else (set mingw=mingw32)
 - cmd: C:\msys64\msys2_shell.cmd -%mingw% -defterm -here -no-start -c "pacman -Syu --noprogressbar --noconfirm"
 - cmd: C:\msys64\msys2_shell.cmd -%mingw% -defterm -here -no-start scripts\build_msi_mingw.sh
 
