Install a pympress icon and desktop file with pip
As part of improving installs, #132. For this, also rename the 128px
icon to simply pympress.png

--- a/setup.cfg
+++ b/setup.cfg
@@ -62,6 +62,10 @@ pympress =
 	share/pixmaps/*.png
 	share/locale/*/LC_MESSAGES/pympress.mo
 
+[options.data_files]
+share/pixmaps/ = pympress/share/pixmaps/pympress.png
+share/applications/ = pympress/share/applications/pympress.desktop
+
 [options.entry_points]
 gui_scripts =
 	pympress = pympress.__main__:main
