--- a/pympress/share/applications/pympress.desktop
+++ b/pympress/share/applications/pympress.desktop
@@ -1,5 +1,5 @@
 [Desktop Entry]
-Categories=Office;Viewer;Presentation;
+Categories=Office;Viewer;Presentation;GTK;
 Comment=A simple yet powerful PDF reader designed for dual-screen presentations
 Exec=pympress %f
 Icon=pympress
