Drop Python 2 support, end of life was 1/1/2020
A breaking change (in the form of a star-expression) was introduced in 3c57753.

--- a/setup.cfg
+++ b/setup.cfg
@@ -37,6 +37,7 @@ classifiers =
 packages =
 	pympress
 	pympress.media_overlays
+python_requires = >=3
 install_requires =
 	python-vlc
 	watchdog
@@ -69,9 +70,6 @@ share/applications/ = pympress/share/applications/pympress.desktop
 [options.entry_points]
 gui_scripts =
 	pympress = pympress.__main__:main
-
-[bdist_wheel]
-universal = 1
 
 [style]
 based_on_style = pep8
