--- a/setup.cfg
+++ b/setup.cfg
@@ -122,7 +122,7 @@ bdist_base = build
 fix_python = False
 no_autoreq = True
 requires =
-	python(abi) = %%(python3 -c 'import sys; print("{}.{}".format(*sys.version_info[:2]))')
+	python(abi) = %%python_version
 	%%{_libdir}/girepository-1.0/cairo-1.0.typelib
 	%%{_libdir}/girepository-1.0/GLib-2.0.typelib
 	%%{_libdir}/girepository-1.0/DBus-1.0.typelib
