Build rpms automatically (#141)

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = pympress
-version = attr: pympress.__version__
+version = 1.5.2
 keywords = pdf-viewer, beamer, presenter, slide, projector, pdf-reader, presentation, python, poppler, gtk, pygi, vlc
 description = A simple and powerful dual-screen PDF reader designed for presentations.
 long_description = file: README.md
@@ -115,3 +115,24 @@ domain = pympress
 directory = pympress/share/locale/
 use-fuzzy = false
 statistics = true
+
+[bdist_rpm]
+#icon = pympress/share/pixmaps/pympress.png
+bdist_base = build
+fix_python = False
+no_autoreq = True
+requires =
+	python(abi) = %%python_version
+	%%{_libdir}/girepository-1.0/cairo-1.0.typelib
+	%%{_libdir}/girepository-1.0/GLib-2.0.typelib
+	%%{_libdir}/girepository-1.0/DBus-1.0.typelib
+	%%{_libdir}/girepository-1.0/DBusGLib-1.0.typelib
+	%%{_libdir}/girepository-1.0/GObject-2.0.typelib
+	%%{_libdir}/girepository-1.0/Gdk-3.0.typelib
+	%%{_libdir}/girepository-1.0/GdkPixbuf-2.0.typelib
+	%%{_libdir}/girepository-1.0/Gio-2.0.typelib
+	%%{_libdir}/girepository-1.0/Gst-1.0.typelib
+	%%{_libdir}/girepository-1.0/GstPlayer-1.0.typelib
+	%%{_libdir}/girepository-1.0/Gtk-3.0.typelib
+	%%{_libdir}/girepository-1.0/Poppler-0.18.typelib
+	python3-watchdog
