--- a/setup.cfg
+++ b/setup.cfg
@@ -119,10 +119,9 @@ statistics = true
 [bdist_rpm]
 #icon = pympress/share/pixmaps/pympress.png
 bdist_base = build
-fix_python = False
-no_autoreq = True
+# Do not fix the interpreter path
+python = python3
 requires =
-	python(abi) = %%python_version
 	%%{_libdir}/girepository-1.0/cairo-1.0.typelib
 	%%{_libdir}/girepository-1.0/GLib-2.0.typelib
 	%%{_libdir}/girepository-1.0/DBus-1.0.typelib
