--- a/.copr/Makefile
+++ b/.copr/Makefile
@@ -1,5 +1,5 @@
 deps:
-	dnf -y install python3 python3-pip python3-setuptools python3-wheel python3-babel
+	dnf -y install python3 python3-pip python3-setuptools python3-wheel python3-babel jq
 	python3 -m pip --disable-pip-version-check install -e .[babel]
 
 catalog: deps
