--- a/setup.cfg
+++ b/setup.cfg
@@ -122,6 +122,7 @@ bdist_base = build
 # Do not fix the interpreter path
 python = python3
 requires =
+	python3
 	%%{_libdir}/girepository-1.0/cairo-1.0.typelib
 	%%{_libdir}/girepository-1.0/GLib-2.0.typelib
 	%%{_libdir}/girepository-1.0/DBus-1.0.typelib
@@ -134,4 +135,11 @@ requires =
 	%%{_libdir}/girepository-1.0/GstPlayer-1.0.typelib
 	%%{_libdir}/girepository-1.0/Gtk-3.0.typelib
 	%%{_libdir}/girepository-1.0/Poppler-0.18.typelib
-	python3-watchdog
+	python3dist(watchdog)
+build-requires =
+	python3-devel
+	python3-setuptools
+	python3dist(babel)
+#suggests =
+#	python3dist(python-vlc)
+#	vlc
