Refine provides for COPR, only build source RPM on github

--- a/setup.cfg
+++ b/setup.cfg
@@ -117,12 +117,11 @@ use-fuzzy = false
 statistics = true
 
 [bdist_rpm]
-#icon = pympress/share/pixmaps/pympress.png
 bdist_base = build
 # Do not fix the interpreter path
 python = python3
 requires =
-	python3
+	python(abi) = %%{python3_version}
 	%%{_libdir}/girepository-1.0/cairo-1.0.typelib
 	%%{_libdir}/girepository-1.0/GLib-2.0.typelib
 	%%{_libdir}/girepository-1.0/DBus-1.0.typelib
@@ -140,6 +139,8 @@ build-requires =
 	python3-devel
 	python3-setuptools
 	python3dist(babel)
+# Broken / inexistant options
+#icon = pympress/share/pixmaps/pympress.png
 #suggests =
 #	python3dist(python-vlc)
 #	vlc
