--- a/.github/workflows/build_binary.yml
+++ b/.github/workflows/build_binary.yml
@@ -1,4 +1,4 @@
-name: Build RPMs
+name: Build source RPM
 
 on: create
 
@@ -12,15 +12,13 @@ jobs:
     - name: Install dependencies
       run: |
         python3 -m pip install --upgrade pip
-        python3 -m pip install setuptools wheel twine
-        python3 -m pip install -e .[babel]
+        python3 -m pip install setuptools wheel twine babel
 
     - name: Build catalogs
       env:
         poeditor_api_token: ${{ secrets.POEDITOR_API_TOKEN }}
       run: |
         ./scripts/poedit.sh download
-        python3 setup.py compile_catalog
 
     - name: Build binaries
       env:
@@ -34,56 +32,4 @@ jobs:
       if: startsWith(github.ref, 'refs/tags/')
       env:
         GHR_PATH: srpm/
-        GITHUB_TOKEN: ${{ secrets.GITHUB_PERSONAL_ACCESS_TOKEN }}
-
-
-  binary:
-    name: Release
-    runs-on: ubuntu-18.04
-    strategy:
-      matrix:
-        python-version: [3.6, 3.7]
-
-    steps:
-    - uses: actions/checkout@v1
-
-    - name: Install dependencies
-      run: |
-        sudo apt-get install -y python${{ matrix.python-version }}
-        python${{ matrix.python-version }} -m pip install --upgrade pip
-        python${{ matrix.python-version }} -m pip install setuptools wheel twine
-        python${{ matrix.python-version }} -m pip install -e .[babel]
-
-    - name: Build catalogs
-      env:
-        poeditor_api_token: ${{ secrets.POEDITOR_API_TOKEN }}
-      run: |
-        ./scripts/poedit.sh download
-        python${{ matrix.python-version }} setup.py compile_catalog
-
-    - name: Build binaries
-      env:
-        BUILD_DIR: build/rpm
-      run: |
-        mkdir -p ${BUILD_DIR}/SOURCES ${BUILD_DIR}/SPECS
-
-        python${{ matrix.python-version }} setup.py sdist --dist=${BUILD_DIR}/SOURCES
-        python${{ matrix.python-version }} setup.py bdist_rpm --dist-dir=${BUILD_DIR}/SPECS --spec-only --no-autoreq
-
-        # Add python version to the pympress version, as different python versions mean incompatible bytecodes
-        sed -i "1,20s/\<version\>/srcversion/g;/^Version:/s/$/_py${{ matrix.python-version }}/;s/^Requires:\s*python3/&(abi) = ${{ matrix.python-version }}/" ${BUILD_DIR}/SPECS/pympress.spec
-
-        # Patching build for weird install locations on ubuntu (dist-packages) to normal install location of other distros (site-packages)
-        sed -i "/%clean/imkdir -p \$RPM_BUILD_ROOT/usr/lib/python%{python_version}/site-packages" ${BUILD_DIR}/SPECS/pympress.spec
-        sed -i "/%clean/imv -f \$RPM_BUILD_ROOT/usr/local/lib/python%{python_version}/dist-packages/* \$RPM_BUILD_ROOT/usr/lib/python%{python_version}/site-packages/ || :" ${BUILD_DIR}/SPECS/pympress.spec
-        sed -i "/%clean/ised -i \"s,/usr/local/lib/python%{python_version}/dist-packages,/usr/lib/python%{python_version}/site-packages,\" INSTALLED_FILES" ${BUILD_DIR}/SPECS/pympress.spec
-
-        rpmbuild --define "_topdir $PWD/${BUILD_DIR}" -bb ${BUILD_DIR}/SPECS/pympress.spec
-
-
-    - name: Upload to GitHub Release
-      uses: fnkr/github-action-ghr@v1
-      if: startsWith(github.ref, 'refs/tags/')
-      env:
-        GHR_PATH: build/rpm/RPMS/noarch/
         GITHUB_TOKEN: ${{ secrets.GITHUB_PERSONAL_ACCESS_TOKEN }}
