--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = pympress
-version = 1.5.2
+version = attr: pympress.__version__
 keywords = pdf-viewer, beamer, presenter, slide, projector, pdf-reader, presentation, python, poppler, gtk, pygi, vlc
 description = A simple and powerful dual-screen PDF reader designed for presentations.
 long_description = file: README.md
