Use format without dist as that seems understood by more distros

--- a/setup.cfg
+++ b/setup.cfg
@@ -134,11 +134,11 @@ requires =
 	%%{_libdir}/girepository-1.0/GstPlayer-1.0.typelib
 	%%{_libdir}/girepository-1.0/Gtk-3.0.typelib
 	%%{_libdir}/girepository-1.0/Poppler-0.18.typelib
-	python3dist(watchdog)
+	python3-watchdog
 build-requires =
 	python3-devel
 	python3-setuptools
-	python3dist(babel)
+	python3-Babel
 # Broken / inexistant options
 #icon = pympress/share/pixmaps/pympress.png
 #suggests =
